[package]
name = "reverssh"
version = "0.1.0"
edition = "2024"

[lib]
name = "reverssh"
path = "src/lib.rs"

[dependencies]
russh = "0.40"
russh-keys = "0.40"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
unicode-width = "0.2"
